--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,14 @@
 	<title>Socket.io Basics</title>
 </head>
 <body>
+	<form action="#" id="message-form">
+		<input type="text" name="message" />
+		<input type="submit" value="Send" />
+	</form>
+
 	<script src="/js/jquery-2.2.3.min.js"></script>
 	<script src="/js/socket.io-1.3.7.js"></script>
 	<script src="/js/app.js"></script>
+
 </body>
 </html>
