Added message to browser UI

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
 	<title>Socket.io Basics</title>
 </head>
 <body>
+	<div class="messages">
+		<!-- messages end up here -->
+	</div>
 	<form action="#" id="message-form">
 		<input type="text" name="message" />
 		<input type="submit" value="Send" />
