--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,13 @@
 		<input type="text" name="message" />
 		<input type="submit" value="Send" />
 	</form>
-
+	
+	<script src="/js/QueryParams.js"></script>
 	<script src="/js/jquery-2.2.3.min.js"></script>
 	<script src="/js/socket.io-1.3.7.js"></script>
 	<script src="/js/app.js"></script>
 	<script src="/js/moment.min.js"></script>
+
 
 </body>
 </html>
