--- a/public/chat.html
+++ b/public/chat.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<a href="index.html">Change Name</a>
+	<h1 class="room-title"><!--room name displays here --></h1>
 	<div class="messages">
 		<!-- messages end up here -->
 	</div>
@@ -13,10 +14,10 @@
 		<input type="text" name="message" />
 		<input type="submit" value="Send" />
 	</form>
-	
-	<script src="/js/QueryParams.js"></script>
+		
 	<script src="/js/jquery-2.2.3.min.js"></script>
 	<script src="/js/socket.io-1.3.7.js"></script>
+	<script src="/js/QueryParams.js"></script>
 	<script src="/js/app.js"></script>
 	<script src="/js/moment.min.js"></script>
 
