--- a/public/chat.html
+++ b/public/chat.html
@@ -11,7 +11,7 @@
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3 well" >
 				<a href="index.html">Change Name</a>
-				<h1 class="room-title"><!--room name displays here --></h1>
+				<h1 class="room-title text-center""><!--room name displays here --></h1>
 				<ul class="messages list-group">
 					<!-- messages end up here -->
 				</ul>
